--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.haruatari.akane</groupId>
-    <artifactId>server</artifactId>
+    <artifactId>server-kernel</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
